big change of new Boolean/Integer/Double to the corresponding valueOf. Likewise with the parseBoolean/parseInteger/parseDouble